--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,21 @@
 
     <dependencies>
 
+        <!--        Spring Boot Starter -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.3.4.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>2.3.4.RELEASE</version>
+        </dependency>
+
+
+
         <!--        Spring Security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
